Add statusbar which displays difficulty and rating for a sudoku.